--- a/src/main/resources/fxml/monitorInsertDataView1.fxml
+++ b/src/main/resources/fxml/monitorInsertDataView1.fxml
@@ -49,7 +49,11 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-
+                  <Button fx:id="changeViewBtn" mnemonicParsing="false" text="Change View" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="200.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
             <VBox prefHeight="400.0" prefWidth="290.0">
@@ -79,18 +83,11 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </VBox.margin>
                   </TextField>
-
                   <Button fx:id="saveBtn" layoutX="250.0" layoutY="250.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="255.0" text="Save" textAlignment="JUSTIFY">
                      <VBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="changeViewBtn"  layoutX="250.0" layoutY="250.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="255.0" text="NEW VIEW" textAlignment="JUSTIFY">
-                     <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
-
                </children>
             </VBox>
          </children>
